--- a/.github/workflows/stage-br_unityinfotechapp(stage).yml
+++ b/.github/workflows/stage-br_unityinfotechapp(stage).yml
@@ -21,13 +21,13 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.x'
+          dotnet-version: '8.0.x'  # Updated to .NET 8.0 to match project
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build "UnityInfotech.Web/UnityInfotech.Web.csproj" --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish "UnityInfotech.Web/UnityInfotech.Web.csproj" -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -38,6 +38,9 @@ jobs:
   deploy:
     runs-on: windows-latest
     needs: build
+    environment:
+      name: 'stage'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     
     steps:
       - name: Download artifact from build job
