--- a/.github/workflows/stage-br_unityinfotechapp(stage).yml
+++ b/.github/workflows/stage-br_unityinfotechapp(stage).yml
@@ -12,6 +12,7 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    if: contains(github.event.head_commit.message, '[deploy]')
     permissions:
       contents: read #This is required for actions/checkout
 
@@ -37,6 +38,7 @@ jobs:
 
   deploy:
     runs-on: windows-latest
+    if: contains(github.event.head_commit.message, '[deploy]')
     needs: build
     environment:
       name: 'stage'
